[tool.poetry]
name = "htmx-demo"
version = "0.1.0"
description = ""
authors = ["Eddie <eddie@5xcampus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
